--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     const { useState, useEffect, createContext, useContext } = React;
     const { createRoot } = ReactDOM;
 
-    const SUPABASE_URL = ''; const SUPABASE_ANON_KEY = ''; const SUPABASE_ADMIN_EMAIL = 'prime@arizona-prime.local';
+    const SUPABASE_URL = 'https://qdxzbsrvzlglnxoeofzn.supabase.co'; const SUPABASE_ANON_KEY = 'sb_secret_DbJwI9AGsoD3aefRyB6XNw_CIdfwtFz'; const SUPABASE_ADMIN_EMAIL = 'prime@arizona-prime.local';
     const supabase = (SUPABASE_URL && SUPABASE_ANON_KEY) ? window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY) : null;
 
     const LS_APPS = 'ap_applications', LS_LEAD = 'ap_leadership';
@@ -245,3 +245,4 @@
   </script>
 </body>
 </html>
+
